@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-10T16:26:14Z",
+  "timestamp" : "2022-05-11T08:21:56Z",
   "count_outdated" : 212,
   "uniques_outdated" : 138,
-  "count" : 245,
-  "uniques" : 162,
+  "count" : 246,
+  "uniques" : 163,
   "clones" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
