@@ -1,5 +1,5 @@
 {
-  "count": 33,
+  "count": 34,
   "uniques": 12,
   "clones": [
     {
@@ -50,6 +50,11 @@
     {
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
