@@ -1,3 +1,9 @@
+2022-05-11T08:21:56Z:
+* notice: last 14d: all unq: 34 12
+* notice: prev accum: outdated-all outdated-unq / all unq: 212 138 / 245 162
+* notice: next accum: outdated-all outdated-unq / all unq: 212 138 / 246 163
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-05-10T16:26:14Z:
 * notice: last 14d: all unq: 33 12
 * notice: prev accum: outdated-all outdated-unq / all unq: 212 138 / 244 162
